Added always capture FSR-FG

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -267,6 +267,12 @@ ResourceFlip=auto
 ; true or false - Default (auto) is false
 ResourceFlipOffset=auto
 
+; Always captures and swaps FSR-FG 3.1 swapchain with selected output
+; This should fix double present call issue with 
+; games create but not use FSR-FG swapchain (Silent Hill f)
+; true or false - Default (auto) is false
+AlwaysCaptureFSRFGSwapchain=auto
+
 
 
 ; -------------------------------------------------------
