--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -214,12 +214,12 @@ HUDFixExtended=auto
 
 ; Prevent swapchain buffers to be used as Hudless
 ; Might help fixing overlay issues but also might reduce compatibility
-; true or false - Default (auto) is false
+; true or false - Default (auto) is true
 HUDFixDontUseSwapchainBuffers=auto
 
 ; Relax resolution checks for Hudless by 32 pixels
 ; Helps games which use black borders for some resolutions and screen ratios (e.g. Witcher 3)
-; true or false - Default (auto) is false
+; true or false - Default (auto) is true
 HUDFixRelaxedResolutionCheck=auto
 
 ; Enables capturing of resources before shader execution.
