Added SkipReset option for FGInputs

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -58,6 +58,10 @@ DisableHudless=auto
 ; true or false - Default (auto) is true
 DisableUI=auto
 
+; Ignores Reset signals coming from FG inputs
+; true or false - Default (auto) is false
+SkipReset=auto
+
 
 
 ; -------------------------------------------------------
