Added ResourceTracking fine tuning options

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -216,6 +216,34 @@ HUDLimit=auto
 ; true or false - Default (auto) is false
 HUDFixExtended=auto
 
+; Do not use CreateRenderTargetView for resource tracking
+; true or false - Default (auto) is false
+HudfixDisableRTV=auto
+
+; Do not use CreateShaderResourceView for resource tracking
+; true or false - Default (auto) is false
+HudfixDisableSRV=auto
+
+; Do not use CreateUnorderedAccessView for resource tracking
+; true or false - Default (auto) is false
+HudfixDisableUAV=auto
+
+; Do not use OMSetRenderTargets for resource tracking
+; true or false - Default (auto) is false
+HudfixDisableOM=auto
+
+; Do not use DrawInstanced for resource tracking
+; true or false - Default (auto) is false
+HudfixDisableDI=auto
+
+; Do not use DrawIndexedInstanced for resource tracking
+; true or false - Default (auto) is false
+HudfixDisableDII=auto
+
+; Do not use Dispatch for resource tracking
+; true or false - Default (auto) is false
+HudfixDisableDispatch=auto
+
 ; Prevent swapchain buffers to be used as Hudless
 ; Might help fixing overlay issues but also might reduce compatibility
 ; true or false - Default (auto) is false
