Added even more tracking options

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -232,6 +232,14 @@ HudfixDisableUAV=auto
 ; true or false - Default (auto) is false
 HudfixDisableOM=auto
 
+; Do not use SetComputeRootDescriptorTable for resource tracking
+; true or false - Default (auto) is true
+HudfixDisableSCR=auto
+
+; Do not use SetGraphicsRootDescriptorTable for resource tracking
+; true or false - Default (auto) is true
+HudfixDisableSGR=auto
+
 ; Do not use DrawInstanced for resource tracking
 ; true or false - Default (auto) is false
 HudfixDisableDI=auto
