--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -79,7 +79,7 @@ DebugResetLines=auto
 ; true or false - Default (auto) is false
 DebugPacingLines=auto
 
-; Enables async FSR3.1 Frame Generation 
+; Enables Async FSR3.1 Frame Generation 
 ; true or false - Default (auto) is false
 AllowAsync=auto
 
@@ -933,7 +933,7 @@ OpenConsole=auto
 ; true or false - Default (auto) is true
 SingleFile=auto
 
-; Enables async logging
+; Enables Async logging
 ; true or false - Default (auto) is true
 LogAsync=auto
 
@@ -1046,15 +1046,15 @@ SkipColorSpace=auto
 [V-Sync]
 ; -------------------------------------------------------
 ; Enable V-Sync controls
-; true or false - Default (auto) true
+; true or false - Default (auto) is false
 OverrideVsync=auto
 
 ; Force V-Sync value
-; true or false - Default (auto) is no forcing
+; true or false - Default (auto) is none selected
 ForceVsync=auto
 
 ; Sync interval value for V-Sync
-; 0 to 3 - Default (auto) is 0
+; 0 to 3 - Default (auto) is none selected
 SyncInterval=auto
 
 
@@ -1113,7 +1113,7 @@ CheckForUpdate=auto
 
 ; Enables blocking of Steam and Epic overlays
 ; Also blocks Steam Input
-; true or false - Default (auto) is false
+; true or false - Default (auto) is false, except for OptiFG when true
 DisableOverlays=auto
 
 ; OptiScaler will try to force High Performance GPU
