Some INI changes

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -755,7 +755,7 @@ Path=auto
 LoadAsiPlugins=auto
 
 ; Loads SpecialK64.dll from game's exe folder
-; Please put a SpecialK.dxgi file next to SpecialK64.dll
+; Please create an empty SpecialK.dxgi file next to SpecialK64.dll
 ; to set SpecialK's working mode, otherwise it will not be activated
 ; BECAUSE OF STABILITY ISSUES, WILL NOT BE LOADED WHEN OPTIFG IS ENABLED
 ; true or false - Default (auto) is false
@@ -1146,9 +1146,9 @@ RestoreGraphicSignature=auto
 UsePrecompiledShaders=auto
 
 ; Color texture resource state to fix for rainbow colors on AMD cards (for mostly UE games) 
-; For UE engine games on AMD, set it to 4 (D3D12_RESOURCE_STATE_RENDER_TARGET)
+; For UE engine games on AMD, set Color to 4 (D3D12_RESOURCE_STATE_RENDER_TARGET)
 ColorResourceBarrier=auto
-; For UE engine games on AMD, set it to 8 (D3D12_RESOURCE_STATE_UNORDERED_ACCESS)
+; For UE engine games on AMD, set MotionVector to 8 (D3D12_RESOURCE_STATE_UNORDERED_ACCESS)
 MotionVectorResourceBarrier=auto
 DepthResourceBarrier=auto
 ColorMaskResourceBarrier=auto
