Added more FG fine tuning options

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -62,6 +62,18 @@ DisableUI=auto
 ; true or false - Default (auto) is false
 SkipReset=auto
 
+; Defines FG rectangle
+; integer value - Default (auto) is whole screen
+RectLeft=auto
+RectTop=auto
+RectWidth=auto
+RectHeight=auto
+
+; Number of frames the FG is allowed to be ahead of the game
+; Might prevent FG on/off switching but also might cause issues
+; 1 to 3 - Default (auto) is 1
+AllowedFrameAhead=auto
+
 
 
 ; -------------------------------------------------------
@@ -82,13 +94,6 @@ DebugPacingLines=auto
 ; Enables Async FSR3.1 Frame Generation 
 ; true or false - Default (auto) is false
 AllowAsync=auto
-
-; Defines FG rectangle
-; integer value - Default (auto) is whole screen
-RectLeft=auto
-RectTop=auto
-RectWidth=auto
-RectHeight=auto
 
 ; Enables usage of mutex for FG swapchain present calls
 ; Disabling it might improve performance in cost of stability
@@ -363,6 +368,19 @@ UseFfxInputs=auto
 ; Enables hot swapping between games FSR3.1 upscaler and OptiScaler's selected upscaler
 ; true or false - Default (auto) is true
 EnableHotSwapping=auto
+
+
+
+; -------------------------------------------------------
+[FSRFGInputs]
+; -------------------------------------------------------
+; Do not use Hudless set at ffxConfig
+; true or false - Default (auto) is false
+SkipConfigForHudless=auto
+
+; Do not use Hudless set at ffxDispatch
+; true or false - Default (auto) is false
+SkipDispatchForHudless=auto
 
 
 
