--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -382,6 +382,11 @@ SkipConfigForHudless=auto
 ; true or false - Default (auto) is false
 SkipDispatchForHudless=auto
 
+; Always tag Depth and Velocity as ValidNow
+; Will use more VRAM but needed for Uniscaler
+; true or false - Default (auto) is false
+DepthAndVelocityValidNow=auto
+
 
 
 ; -------------------------------------------------------
