Added skip from XeFG check Added WWM quirk for it

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -155,6 +155,11 @@ FPTWaitForSingleObjectOnFence=auto
 ; -------------------------------------------------------
 [XeFG]
 ; -------------------------------------------------------
+; Skips pre ini checks for XeFG
+; Might bad IQ or cause crashes!
+; true or false - Default (auto) is false
+IgnoreInitChecks=auto
+
 ; XeFG DepthInverted flag
 ; true or false - Default (auto) is false
 DepthInverted=auto
