Added hack for Luma + Agility update

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -1144,6 +1144,12 @@ CheckForUpdate=auto
 ; true or false - Default (auto) is false, except for OptiFG when true
 DisableOverlays=auto
 
+; When using Luma mod and Agility update is enabled
+; OptiScaler will delay loading of Reshade and create D3D12 device for Luma first
+; This option will prevent creation of D3D12 device for Luma mod
+; true or false - Default (auto) is false
+DontCreateD3D12DeviceForLuma=auto
+
 ; OptiScaler will try to force High Performance GPU
 ; true or false - Default (auto) is false
 PreferDedicatedGpu=auto
@@ -1151,7 +1157,6 @@ PreferDedicatedGpu=auto
 ; OptiScaler will report only first High Performance GPU
 ; true or false - Default (auto) is false
 PreferFirstDedicatedGpu=auto
-
 
 ; Rounds internal resolutions width and height to multiple of this value
 ; 2, 4, 8, 16 ...  - Default (auto) is disabled
