Basic Redstone support (#791)

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -466,6 +466,11 @@ DebugView=auto
 ; Depending on GPU - Default (auto) is 0 - FSR4 for RDNA4, FSR3 for the rest
 UpscalerIndex=auto
 
+; Selects FG backend for FFX
+; 0 = FSR 4.0.0 | 1 = FSR 3.1.6
+; Depending on GPU - Default (auto) is 0 - FSR4 for RDNA4, FSR3 for the rest
+FGIndex=auto
+
 ; Sets Velocity Factor for FSR3.1.1 and above
 ; Value of 0.0f can improve temporal stability of bright pixels.
 ; 0.0 to 1.0 - Default (auto) is 1.0
