Added FSR-FG watermark option

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -150,6 +150,10 @@ FPTHybridSpinTime=auto
 ; true or false - Default (auto) is false
 FPTWaitForSingleObjectOnFence=auto
 
+; Enable FSR-FG Redstone Watermark
+; true or false - Default (auto) is false
+EnableWatermark=auto
+
 
 
 ; -------------------------------------------------------
