--- a/OptiScaler/OptiScaler.vcxproj
+++ b/OptiScaler/OptiScaler.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -318,6 +318,8 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClInclude Include="shaders\depth_invert\DI_Common.h" />
     <ClInclude Include="shaders\depth_invert\DI_Dx12.h" />
     <ClInclude Include="shaders\depth_invert\precompiled\DI_Shader.h" />
+    <ClInclude Include="shaders\Shader_Dx12.h" />
+    <ClInclude Include="shaders\Shader_Dx12Utils.h" />
     <ClInclude Include="upscaler_time\UpscalerTime_Dx11.h" />
     <ClInclude Include="upscaler_time\UpscalerTime_Dx12.h" />
     <ClInclude Include="upscaler_time\UpscalerTime_Vk.h" />
@@ -460,9 +462,9 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClInclude Include="shaders\format_transfer\precompile\B8R8G8A8_Shader.h" />
     <ClInclude Include="shaders\format_transfer\precompile\R10G10B10A2_Shader.h" />
     <ClInclude Include="shaders\format_transfer\precompile\R8G8B8A8_Shader.h" />
-    <ClInclude Include="shaders\fsr1\ffx_fsr1.h" />
-    <ClInclude Include="shaders\fsr1\FSR_EASU_Shader.h" />
-    <ClInclude Include="shaders\fsr1\FSR_EASU_Shader_Dx11.h" />
+    <ClInclude Include="shaders\output_scaling\fsr1\ffx_fsr1.h" />
+    <ClInclude Include="shaders\output_scaling\fsr1\FSR_EASU_Shader.h" />
+    <ClInclude Include="shaders\output_scaling\fsr1\FSR_EASU_Shader_Dx11.h" />
     <ClInclude Include="shaders\output_scaling\OS_Common.h" />
     <ClInclude Include="shaders\output_scaling\OS_Dx11.h" />
     <ClInclude Include="shaders\output_scaling\OS_Dx12.h" />
@@ -503,6 +505,7 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClCompile Include="hooks\Kernel_Hooks.cpp" />
     <ClCompile Include="hooks\LibraryLoad_Hooks.cpp" />
     <ClCompile Include="shaders\depth_invert\DI_Dx12.cpp" />
+    <ClCompile Include="shaders\Shader_Dx12.cpp" />
     <ClCompile Include="spoofing\Dxgi_Spoofing.cpp" />
     <ClCompile Include="spoofing\Vulkan_Spoofing.cpp" />
     <ClCompile Include="upscaler_time\UpscalerTime_Dx11.cpp" />
