--- a/OptiScaler/OptiScaler.vcxproj
+++ b/OptiScaler/OptiScaler.vcxproj
@@ -318,6 +318,7 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClInclude Include="shaders\depth_invert\DI_Common.h" />
     <ClInclude Include="shaders\depth_invert\DI_Dx12.h" />
     <ClInclude Include="shaders\depth_invert\precompiled\DI_Shader.h" />
+    <ClInclude Include="shaders\format_transfer\precompile\FT_Shader.h" />
     <ClInclude Include="shaders\Shader_Dx12.h" />
     <ClInclude Include="shaders\Shader_Dx12Utils.h" />
     <ClInclude Include="upscaler_time\UpscalerTime_Dx11.h" />
@@ -459,9 +460,6 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClInclude Include="shaders\bias\precompile\Bias_Shader_Dx11.h" />
     <ClInclude Include="shaders\format_transfer\FT_Common.h" />
     <ClInclude Include="shaders\format_transfer\FT_Dx12.h" />
-    <ClInclude Include="shaders\format_transfer\precompile\B8R8G8A8_Shader.h" />
-    <ClInclude Include="shaders\format_transfer\precompile\R10G10B10A2_Shader.h" />
-    <ClInclude Include="shaders\format_transfer\precompile\R8G8B8A8_Shader.h" />
     <ClInclude Include="shaders\output_scaling\fsr1\ffx_fsr1.h" />
     <ClInclude Include="shaders\output_scaling\fsr1\FSR_EASU_Shader.h" />
     <ClInclude Include="shaders\output_scaling\fsr1\FSR_EASU_Shader_Dx11.h" />
