--- a/OptiScaler/OptiScaler.vcxproj.filters
+++ b/OptiScaler/OptiScaler.vcxproj.filters
@@ -215,15 +215,6 @@
     <ClInclude Include="shaders\format_transfer\FT_Dx12.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="shaders\format_transfer\precompile\B8R8G8A8_Shader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="shaders\format_transfer\precompile\R10G10B10A2_Shader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="shaders\format_transfer\precompile\R8G8B8A8_Shader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="shaders\output_scaling\fsr1\ffx_fsr1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -630,6 +621,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="shaders\Shader_Dx12.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shaders\format_transfer\precompile\FT_Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
