--- a/OptiScaler/OptiScaler.vcxproj
+++ b/OptiScaler/OptiScaler.vcxproj
@@ -450,7 +450,7 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClInclude Include="rcas\RCAS_Common.h" />
     <ClInclude Include="rcas\RCAS_Dx11.h" />
     <ClInclude Include="rcas\RCAS_Dx12.h" />
-    <ClInclude Include="nvapi\ReflexHooks.h" />
+    <ClInclude Include="hooks\Reflex_Hooks.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="scanner\scanner.h" />
     <ClInclude Include="shaders\bias\Bias_Common.h" />
@@ -533,7 +533,7 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClCompile Include="nvapi\fakenvapi.cpp" />
     <ClCompile Include="nvapi\NvApiHooks.cpp" />
     <ClCompile Include="nvapi\NvApiTypes.cpp" />
-    <ClCompile Include="nvapi\ReflexHooks.cpp" />
+    <ClCompile Include="hooks\Reflex_Hooks.cpp" />
     <ClCompile Include="resource_tracking\ResTrack_dx12.cpp" />
     <ClCompile Include="shaders\hudless_compare\HC_Dx12.cpp" />
     <ClCompile Include="shaders\resource_flip\RF_Dx12.cpp" />
