Hopefully fixes ResizeBuffers & ResizeBuffers1 crashes

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -190,7 +190,7 @@ ForceBorderless=auto
 ; Skip ResizeBuffers call to swapchain
 ; If old and new descriptions are the same
 ; Prevents crashes after ResizeBuffers calls
-; true or false - Default (auto) is true
+; true or false - Default (auto) is false
 SkipResizeBuffers=auto
 
 ; Normally after ResizeBuffers call swapchain buffers
@@ -375,7 +375,7 @@ EnableFfxInputs=auto
 UseFfxInputs=auto
 
 ; Enables hot swapping between games FSR3.1 upscaler and OptiScaler's selected upscaler
-; true or false - Default (auto) is true
+; true or false - Default (auto) is false
 EnableHotSwapping=auto
 
 
