Reverted Resizebuffer change

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -190,7 +190,7 @@ ForceBorderless=auto
 ; Skip ResizeBuffers call to swapchain
 ; If old and new descriptions are the same
 ; Prevents crashes after ResizeBuffers calls
-; true or false - Default (auto) is false
+; true or false - Default (auto) is true
 SkipResizeBuffers=auto
 
 ; Normally after ResizeBuffers call swapchain buffers
