Seperated DepthAndVelocity ValidNow and added Hudless ValidNow. Moved these options under FrameGen

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -74,6 +74,22 @@ RectHeight=auto
 ; 1 to 3 - Default (auto) is 1
 AllowedFrameAhead=auto
 
+; Always tag Depth as ValidNow
+; Will use more VRAM but needed for Uniscaler
+; true or false - Default (auto) is false
+DepthValidNow=auto
+
+; Always tag Velocity as ValidNow
+; Will use more VRAM but needed for Uniscaler
+; true or false - Default (auto) is false
+VelocityValidNow=auto
+
+; Always tag Hudless as ValidNow
+; Will use more VRAM but needed for Uniscaler
+; true or false - Default (auto) is false
+HudlessValidNow=auto
+
+
 
 
 ; -------------------------------------------------------
@@ -390,11 +406,6 @@ SkipConfigForHudless=auto
 ; Do not use Hudless set at ffxDispatch
 ; true or false - Default (auto) is false
 SkipDispatchForHudless=auto
-
-; Always tag Depth and Velocity as ValidNow
-; Will use more VRAM but needed for Uniscaler
-; true or false - Default (auto) is false
-DepthAndVelocityValidNow=auto
 
 
 
