Added OnlyAcceptFirstHudless option

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -89,6 +89,10 @@ VelocityValidNow=auto
 ; true or false - Default (auto) is false
 HudlessValidNow=auto
 
+; If source tags more than one hudless only use first one
+; true or false - Default (auto) is false
+OnlyAcceptFirstHudless=auto
+
 
 
 
