Added Fsr2 Dx11 input support

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -364,6 +364,10 @@ EnableXeSSInputs=auto
 ; true or false - Default (auto) is true
 EnableFsr2Inputs=auto
 
+; OptiScaler will hook Fsr2 Dx11 Inputs instead of Dx12 ones
+; true or false - Default (auto) is false
+UseFsr2Dx11Inputs=auto
+
 ; OptiScaler will use Fsr2 Inputs
 ; true or false - Default (auto) is true
 UseFsr2Inputs=auto
