Made resource tracking optional

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -306,6 +306,11 @@ HUDFixImmediate=auto
 ; true or false - Default (auto) is false
 AlwaysTrackHeaps=auto
 
+; Instead of single mutex use shards for tracking resources
+; Might improve performance on heavy multithreaded games
+; true or false - Default (auto) is false
+UseShards=auto
+
 ; Block rarely used resources from using as hudless
 ; to prevent flickers and other issues
 ; true or false - Default (auto) is false
