Seperated DLSS/DLSSD preset overrides Added ability to revert back to games original preset

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -635,6 +635,27 @@ UseGenericAppIdWithDlss=auto
 
 
 ; -------------------------------------------------------
+[DLSSD]
+; -------------------------------------------------------
+; Set this to true to enable custom render preset overrides
+; true or false - Default (auto) is false
+RenderPresetOverride=auto
+
+; Render presets for quality settings
+; Depends on DLSSD version, but most recent order is
+; 0 = Default | 1 = A | 2 = B | 3 = C | 4 = D | 5 = E
+; Default (auto) is 0
+RenderPresetForAll=auto
+RenderPresetDLAA=auto
+RenderPresetUltraQuality=auto
+RenderPresetQuality=auto
+RenderPresetBalanced=auto
+RenderPresetPerformance=auto
+RenderPresetUltraPerformance=auto
+
+
+
+; -------------------------------------------------------
 [Nukems]
 ; -------------------------------------------------------
 ; Fix broken visuals in some games (mostly non-UE) on AMD GPUs under Windows
