--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -184,6 +184,11 @@ EnableWatermark=auto
 ; true or false - Default (auto) is false
 IgnoreInitChecks=auto
 
+; Sets interpolated frame count (MFG)
+; 1 = 2X | 2 = 3X | 3 = 4X
+; true or false - Default (auto) is 1
+InterpolationCount=auto
+
 ; XeFG DepthInverted flag
 ; true or false - Default (auto) is false
 DepthInverted=auto
