Added FSR2 Vulkan input support

--- a/OptiScaler.ini
+++ b/OptiScaler.ini
@@ -374,9 +374,13 @@ EnableXeSSInputs=auto
 ; true or false - Default (auto) is true
 EnableFsr2Inputs=auto
 
-; OptiScaler will hook Fsr2 Dx11 Inputs instead of Dx12 ones
+; OptiScaler will hook Fsr2 Dx11 Inputs instead of Dx12 one
 ; true or false - Default (auto) is false
 UseFsr2Dx11Inputs=auto
+
+; OptiScaler will hook Fsr2 Vulkan Inputs instead of Dx11 & Dx12 ones
+; true or false - Default (auto) is false
+UseFsr2VulkanInputs=auto
 
 ; OptiScaler will use Fsr2 Inputs
 ; true or false - Default (auto) is true
