Add RCAS to Vulkan upscalers

--- a/OptiScaler/OptiScaler.vcxproj
+++ b/OptiScaler/OptiScaler.vcxproj
@@ -322,8 +322,12 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClInclude Include="shaders\depth_invert\DI_Dx12.h" />
     <ClInclude Include="shaders\depth_invert\precompiled\DI_Shader.h" />
     <ClInclude Include="shaders\format_transfer\precompile\FT_Shader.h" />
+    <ClInclude Include="shaders\rcas\precompile\RCAS_Shader_Vk.h" />
+    <ClInclude Include="shaders\rcas\RCAS_Vk.h" />
     <ClInclude Include="shaders\Shader_Dx12.h" />
     <ClInclude Include="shaders\Shader_Dx12Utils.h" />
+    <ClInclude Include="shaders\Shader_Vk.h" />
+    <ClInclude Include="shaders\Shader_VkUtils.h" />
     <ClInclude Include="upscaler_time\UpscalerTime_Dx11.h" />
     <ClInclude Include="upscaler_time\UpscalerTime_Dx12.h" />
     <ClInclude Include="upscaler_time\UpscalerTime_Vk.h" />
@@ -509,7 +513,9 @@ powershell -Command "Start-Sleep -Seconds 2; $commit = git rev-parse --short HEA
     <ClCompile Include="inputs\FSR2_Vk.cpp" />
     <ClCompile Include="inputs\XeSS_Dx11.cpp" />
     <ClCompile Include="shaders\depth_invert\DI_Dx12.cpp" />
+    <ClCompile Include="shaders\rcas\RCAS_Vk.cpp" />
     <ClCompile Include="shaders\Shader_Dx12.cpp" />
+    <ClCompile Include="shaders\Shader_Vk.cpp" />
     <ClCompile Include="spoofing\Dxgi_Spoofing.cpp" />
     <ClCompile Include="spoofing\Vulkan_Spoofing.cpp" />
     <ClCompile Include="upscaler_time\UpscalerTime_Dx11.cpp" />
